syntax = "proto3";

package eguard.v1;

import "eguard/v1/telemetry.proto";
import "eguard/v1/compliance.proto";
import "eguard/v1/command.proto";
import "eguard/v1/response.proto";

service AgentControlService {
  rpc Ping(PingRequest) returns (PingResponse);
  rpc Enroll(EnrollRequest) returns (EnrollResponse);
  rpc Heartbeat(HeartbeatRequest) returns (HeartbeatResponse);
  rpc GetLatestThreatIntel(ThreatIntelRequest) returns (ThreatIntelVersion);
}

service AgentService {
  rpc Enroll(EnrollRequest) returns (EnrollResponse);
  rpc Heartbeat(HeartbeatRequest) returns (HeartbeatResponse);
  rpc StreamEvents(stream TelemetryEvent) returns (TelemetryStreamAck);
  rpc ReportCompliance(ComplianceReport) returns (ComplianceAck);
  rpc CommandChannel(CommandChannelRequest) returns (stream AgentCommand);
  rpc ReportResponse(ResponseReport) returns (ResponseAck);
  rpc GetPolicy(PolicyRequest) returns (PolicyResponse);
  rpc DownloadRuleBundle(RuleBundleRequest) returns (stream RuleBundleChunk);
}

message PingRequest {
  string agent_id = 1;
}

message PingResponse {
  string status = 1;
}

message EnrollRequest {
  string agent_id = 1;
  string mac = 2;
  string hostname = 3;
  string os_type = 4;
  string agent_version = 5;
}

message EnrollResponse {
  string status = 1;
  string issued_profile = 2;
}

message HeartbeatRequest {
  string agent_id = 1;
  string agent_version = 2;
  string compliance_status = 3;
  int64 sent_at_unix = 4;
}

message HeartbeatResponse {
  string status = 1;
  string server_time = 2;
}

message ThreatIntelRequest {
  string agent_id = 1;
}

message ThreatIntelVersion {
  string version = 1;
  string bundle_path = 2;
  int64 sigma_count = 3;
  int64 yara_count = 4;
  int64 ioc_count = 5;
  int64 cve_count = 6;
  int64 published_at_unix = 7;
  int64 custom_rule_count = 8;
  string custom_rule_version_hash = 9;
}

message PolicyRequest {
  string agent_id = 1;
}

message PolicyResponse {
  string policy_id = 1;
  string config_version = 2;
  string policy_json = 3;
}

message RuleBundleRequest {
  string agent_id = 1;
  string target_version = 2;
}

message RuleBundleChunk {
  bytes data = 1;
  int32 sequence = 2;
  bool last = 3;
}
